# progetto-esame

./: .gitignore  Algorithm  Algorithm.cpp  CMakeLists.txt  README.md  a.out  main_algorithm  simulation_output.txt  simulazione.py  test_simulazione
progetto/: Algorithm  Algorithm.cpp  README.md
src/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Simulation.cpp  Simulation.hpp  algorithm.cpp  main.cpp  main_algorithm.cpp  simulation_output.txt
src/test/: test_simulazione.cpp
test/: test_simulazione.cpp
